customize some margins

--- a/fish.html
+++ b/fish.html
@@ -102,16 +102,16 @@
             <section id="aunts-uncles" class="col">
               <h2>Aunts and Uncles</h2>
               <div id="fish" class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Cray Zachary Fish</h5>
+                  <h5 class="mt-0">Cray Zachary Fish</h5>
                   descriptive text here
                 </div>
               </div>
               <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Marye</h5>
+                  <h5 class="mt-0">Marye</h5>
                   descriptive text here
                 </div>
               </div>
