--- a/fish.html
+++ b/fish.html
@@ -101,138 +101,138 @@
           <div class="row">
             <section id="aunts-uncles" class="col">
               <h2>Aunts and Uncles</h2>
-              <div id="fish" class="media">
+              <div id="fish" class="media mt-3">
                 <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
                   <h5 class="mt-0">Cray Zachary Fish</h5>
                   descriptive text here
                 </div>
               </div>
-              <div class="media">
+              <div class="media mt-3">
                 <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
                   <h5 class="mt-0">Marye</h5>
                   descriptive text here
                 </div>
               </div>
-              <div id="roderick" class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div id="roderick" class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Roderick Usher</h5>
+                  <h5 class="mt-0">Roderick Usher</h5>
                   descriptive text here
                 </div>
               </div>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Antonia Paduana</h5>
+                  <h5 class="mt-0">Antonia Paduana</h5>
                   descriptive text here
                 </div>
               </div>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Robin Scriver</h5>
+                  <h5 class="mt-0">Robin Scriver</h5>
                   descriptive text here
                 </div>
               </div>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Vera Lance</h5>
+                  <h5 class="mt-0">Vera Lance</h5>
                   descriptive text here
                 </div>
               </div>
             </section>
             <section id="cousins" class="col">
               <h2>Cousins</h2>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>David</h5>
+                  <h5 class="mt-0">David</h5>
                   descriptive text here
                 </div>
               </div>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Erin</h5>
+                  <h5 class="mt-0">Erin</h5>
                   descriptive text here
                 </div>
               </div>
             </section>
             <section id="nieces-nephews" class="col">
               <h2>Nieces and Nephews</h2>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Roux</h5>
+                  <h5 class="mt-0">Roux</h5>
                   descriptive text here
                 </div>
               </div>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Liz</h5>
+                  <h5 class="mt-0">Liz</h5>
                   descriptive text here
                 </div>
               </div>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Megan</h5>
+                  <h5 class="mt-0">Megan</h5>
                   descriptive text here
                 </div>
               </div>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Leo</h5>
+                  <h5 class="mt-0">Leo</h5>
                   descriptive text here
                 </div>
               </div>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Claire</h5>
+                  <h5 class="mt-0">Claire</h5>
                   descriptive text here
                 </div>
               </div>
             </section>
             <section id="performers" class="col">
               <h2>Performers</h2>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Micky Slinger</h5>
+                  <h5 class="mt-0">Micky Slinger</h5>
                   descriptive text here
                 </div>
               </div>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Jo</h5>
+                  <h5 class="mt-0">Jo</h5>
                   descriptive text here
                 </div>
               </div>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Flute Guy</h5>
+                  <h5 class="mt-0">Flute Guy</h5>
                   descriptive text here
                 </div>
               </div>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Roderick Usher</h5>
+                  <h5 class="mt-0">Roderick Usher</h5>
                   See <a href="#roderick">above</a>
                 </div>
               </div>
-              <div class="media">
-                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon">
+              <div class="media mt-3">
+                <img src="https://volkanceylan.gallerycdn.vsassets.io/extensions/volkanceylan/sereneserenityapplicationtemplate/2.9.21.0/1490544914347/219774/124/thumbnail.png" height="64" width="64" alt="spiral geometric icon" class="mr-3">
                 <div class="media-body">
-                  <h5>Cray Z. Fish</h5>
+                  <h5 class="mt-0">Cray Z. Fish</h5>
                   See <a href="#fish">above</a>
                 </div>
               </div>
