Made Navbar sticky

--- a/fish.html
+++ b/fish.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- MY OWN CUSTOMIZATIONS -->
     <link href='fish.css' rel='stylesheet' type='text/css'>
-    <script src='fish.js' type='text/javascript'></script>
     <!-- NEAT CURSIVE FONT -->
     <!-- <link href='https://fonts.googleapis.com/css?family=Dawning+of+a+New+Day' rel='stylesheet' type='text/css'> -->
     <!-- Bootstrap CSS -->
@@ -28,24 +27,28 @@
         <img src="https://s12.postimg.org/h4bxlxrp9/IMG_5233.jpg" alt="wooded path">
       </div>
       <div id="#notAPage">
-        <nav class="navbar navbar-default navbar-fixed-top">
-          <paper-tabs selected="0">
-            <paper-tab link>
-              <a href="#welcome" class="horizontal center-center layout">Welcome</a>
-            </paper-tab>
-            <paper-tab link>
-              <a href="#family" class="horizontal center-center layout">Meet the Family</a>
-            </paper-tab>
-            <paper-tab link>
-              <a href="#about-faire" class="horizontal center-center layout">What is Renaissance Faire?</a>
-            </paper-tab>
-            <paper-tab link>
-              <a href="#join" class="horizontal center-center layout">How To Join</a>
-            </paper-tab>
-            <paper-tab link>
-              <a href="#documents" class="horizontal center-center layout">Documents</a>
-            </paper-tab>
-          </paper-tabs>
+        <nav class="navbar" data-toggle="sticky-onscroll">
+          <div class="container">
+            <div class="navbar-header">
+              <paper-tabs selected="0">
+                <paper-tab link>
+                  <a href="#welcome" class="horizontal center-center layout">Welcome</a>
+                </paper-tab>
+                <paper-tab link>
+                  <a href="#family" class="horizontal center-center layout">Meet the Family</a>
+                </paper-tab>
+                <paper-tab link>
+                  <a href="#about-faire" class="horizontal center-center layout">What is Renaissance Faire?</a>
+                </paper-tab>
+                <paper-tab link>
+                  <a href="#join" class="horizontal center-center layout">How To Join</a>
+                </paper-tab>
+                <paper-tab link>
+                  <a href="#documents" class="horizontal center-center layout">Documents</a>
+                </paper-tab>
+              </paper-tabs>
+            </div>
+          </div>
         </nav>
       </div>
     </header>
@@ -355,5 +358,6 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src='fish.js' type='text/javascript'></script>
   </body>
 </html>
